updated files html

--- a/index.html
+++ b/index.html
@@ -116,18 +116,15 @@
             </div>
           </div>
         </section>
-        <main class="content">
-          <section class="reservation" id="reservar">
-            <!-- Contenido de reservas -->
-          </section>
-        </main>
-        <main class="content">
+        <section class="reservation" id="reservar">
+          <!-- Contenido de reservas -->
+        </section>
         <section class="menu" id="contactos">
           <!-- Contenido del menú -->
         </section>
       </main>
 
-      <footer>
+      <footer class="footer">
         <!-- Contenido del footer -->
       </footer>
     </div>
