updated files html

--- a/index.html
+++ b/index.html
@@ -116,9 +116,13 @@
             </div>
           </div>
         </section>
+        <main class="content">
         <section class="reservation" id="reservar">
           <!-- Contenido de reservas -->
         </section>
+        </main>
+
+        <main class="content">
         <section class="menu" id="contactos">
           <!-- Contenido del menú -->
         </section>
