--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
+    <title>Triple Coffee</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="projecto 4 coffee shop" />
@@ -14,7 +15,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Café Triple Peaks - Café de especialidad</title>
   </head>
   <body>
     <div class="page">
@@ -27,13 +27,13 @@
           />
           <ul class="nav__links">
             <li>
-              <a href="#recetas" class="nav__link">Recetas</a>
+              <a class="nav__link" href="#recipes">Receitas</a>
             </li>
             <li>
-              <a href="#reservar" class="nav__link">Reservar una mesa</a>
+              <a class="nav__link" href="#reservation">Reservar uma mesa</a>
             </li>
             <li>
-              <a href="#contactos" class="nav__link">Contactos</a>
+              <a class="nav__link" href="#footer">Contatos</a>
             </li>
           </ul>
         </nav>
@@ -76,45 +76,38 @@
 
       <main class="content">
         <section class="recipes" id="recipes">
-          <h2 class="recipes__title">Recetas</h2>
+          <h2 class="recipes__title">Receitas</h2>
           <p class="recipes__subtitle">
-            Echa un vistazo a las recetas que hemos reunido para que elabores
-            tus propios snacks.
+            Confira algumas receitas que coletamos para seu lanchinho caseiro:
           </p>
-          <div class="recipes__videos">
-            <div class="recipes__video">
+          <ul class="recipes__videos">
+            <li class="recipes__video-item">
               <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=vfh3bJST7WPBsERK"
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc?si=1i34MNb-5K1jrJKh"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
               <p class="recipes__video-caption">
-                <span>Receta en Aeropress</span>
+                <span>Receita Aeropress</span>
                 <span>~5 min</span>
               </p>
-            </div>
-            <div class="recipes__video">
+            </li>
+            <li class="recipes__video-item">
               <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/st571DYYTR8?si=_yyVMQflG8Cfzgt-"
+                class="recipes__iframe"
+                src="https://www.youtube.com/embed/st571DYYTR8?si=q-lqN80sTS-mSAoe"
                 title="YouTube video player"
-                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                referrerpolicy="strict-origin-when-cross-origin"
                 allowfullscreen
               ></iframe>
               <p class="recipes__video-caption">
-                <span>Receta en cafetera francesa</span>
+                <span>Receita de Prensa Francesa</span>
                 <span>~15 min</span>
               </p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
       </main>
 
