--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
             </li>
           </ul>
         </section>
+      </main>
         <footer class="footer" id="footer">
         <div class="footer__content">
         <p class="footer__copyright">&copy; 2023 Your name</p>
