updated files html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Project 4 Coffe shop with HTML and CSS" />
-    <meta name="keywords" content="HTML, CSS, JavaScript" />
-    <meta name="author" content="Felipe Nehmi" />
+    <meta name="keywords" content="HTML, CSS " />
+    <meta name="author" content="Maher Ramadan" />
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="./vendor/normalize.css" />
     <link rel="stylesheet" href="./pages/index.css" />
@@ -42,11 +42,11 @@
         <h1 class="header__title">
           `
           <span class="header__span-accent">Café especial</span>
-          na&nbsp;biblioteca&nbsp;Triple&nbsp;Peaks
+          en&nbsp;biblioteca&nbsp;Triple&nbsp;Peaks
         </h1>
         <p class="header__description">
-          Esta é nossa zona de estudo! Temos aquele cafezinho para energizar
-          você e vibrações aconchegantes para soltar a criatividade.
+          ¡Te damos la bienvenida a nuestra zona de estudio! Tenemos café para
+          darte energía y un ambiente acogedor que mo
         </p>
         <img
           src="./images/inside_coffee_shop.png"
@@ -55,9 +55,9 @@
         />
         <div class="header__footer">
           <div>
-            <p class="header__paragraph">Horários:</p>
-            <p class="header__paragraph">Segunda a sexta (10:00 – 19:00)</p>
-            <p class="header__paragraph">Sábado a domingo (11:00 - 18:00)</p>
+            <p class="header__paragraph">Horário:</p>
+            <p class="header__paragraph">Lunes a Viernes(10:00 – 19:00)</p>
+            <p class="header__paragraph">Sábados y domingos (11:00 - 18:00)</p>
           </div>
           <p class="header__paragraph">
             200 Success Avenue, a cidade de Triple Peaks
@@ -66,9 +66,10 @@
       </header>
       <main class="content">
         <section class="recipes" id="recipes">
-          <h2 class="recipes__title">Receitas</h2>
+          <h2 class="recipes__title">Recetas</h2>
           <p class="recipes__subtitle">
-            Confira algumas receitas que coletamos para seu lanchinho caseiro:
+            Explora algunas recetas que reunimos para que hagas tus proprios
+            snacks
           </p>
           <ul class="recipes__videos">
             <li class="recipes__video-item">
@@ -80,7 +81,7 @@
                 allowfullscreen
               ></iframe>
               <p class="recipes__video-caption">
-                <span>Receita Aeropress</span>
+                <span>Receta en Aeropress</span>
                 <span>~5 min</span>
               </p>
             </li>
@@ -93,7 +94,7 @@
                 allowfullscreen
               ></iframe>
               <p class="recipes__video-caption">
-                <span>Receita de Prensa Francesa</span>
+                <span>Receta en cafetera Francesa</span>
                 <span>~15 min</span>
               </p>
             </li>
