--- a/index.html
+++ b/index.html
@@ -100,7 +100,64 @@
             </li>
           </ul>
         </section>
-        <section class="reservation" id="reservation"></section>
+        <section class="reservation" id="reservation">
+          <h2 class="reservation__title">Reservar una mesa</h2>
+          <form class="reservation__form form">
+            <fieldset class="form__fieldset"></fieldset>
+            <label class="form__label">
+              Nombre *
+              <input
+                type="text"
+                class="form__input"
+                name="nombre"
+                required
+                placeholder="Nombre"
+              />
+            </label>
+            <label class="form__label"
+              >Número de comensales *
+              <input
+                type="number"
+                class="form__input"
+                name="Número de comensales"
+                min="1"
+                max="8"
+                placeholder="1-8"
+              />
+            </label>
+            <label class="form__label"
+              >fecha y hora *
+              <input
+                type="datetime-local"
+                class="form__input"
+                name="fecha y hora"
+                placeholder="fecha y hora"
+              />
+            </label>
+            <label class="form__label">
+              Tu correo electronico *
+              <input
+                type="email"
+                class="form__input"
+                name="email"
+                required
+                placeholder="email@email.com"
+              />
+            </label>
+
+            <button type="submit" class="form__button">
+              Reservar una mesa
+            </button>
+            <label class="form__label form__label_type_checkbox">
+                <input
+                  type="checkbox"
+                  class="form__checkbox"
+                  name="remember-me"
+                  required
+                />
+                Acepto los terminos de uso
+          </form>
+        </section>
       </main>
       <footer class="footer" id="footer"></footer>
     </div>
