--- a/index.html
+++ b/index.html
@@ -159,7 +159,40 @@
           </form>
         </section>
       </main>
-      <footer class="footer" id="footer"></footer>
+      <footer class="footer" id="footer">
+        <div class="footer__content">
+          <img 
+             class="footer__logo"
+             src="./images/logo_coffeeshop_light.svg"
+             alt="TripleTen Logo">
+
+             <div class="footer__social">
+               <p class="footer__social-heading">Redes sociales</p>
+               <ul class="footer__list">
+                <li class="footer__list-item">
+                  <a href="#" class="footer__social-link">
+                    <img 
+                      src="./images/facebook_white.svg"
+                      alt="facebook icon"
+                      class="footer__social-icon"
+                      />Facebook
+                  </a>
+                </li>
+                <li class="footer__list-item">
+                <a href="#" class="footer__social-link">
+                  <img
+                    src="./images/instagram_white.svg"
+                    alt="Instagram icon"
+                    class="footer__social-icon"
+                  />Instagram
+                </a>
+              </li>
+               </ul>
+             </div>
+        </div>
+        <p class="footer__copyright">&copy; 2024 Maher Ramadan</p>
+        <div class="footer__circle"></div>
+      </footer>
     </div>
   </body>
 </html>
